# girlfriend

./: .gitignore  Cargo.toml  LICENSE  README.md  foundry.toml
assets/: bsc_tx.txt  eth_tx.txt  fn_signatures.json  template.hbs
config/: config.example.toml
db/: db
src/: call.rs  config.rs  contract.rs  girlfriend.rs  http.rs  kv.rs  lib.rs  logger.rs  tx.rs  utils.rs
src/abi/: guesser.rs  mod.rs  signature.rs  types.rs
